examples/type_system/failing/126_list_comprehension_missing_close_bracket.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

let ys = [x + 1 | x <- [1, 2]
let after = 3
